--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ deps =
     requests-mock
 
 [testenv]
-commands = pytest -vv -s --basetemp={envtmpdir} --flake8 {posargs: tests fellowship}
+commands = pytest -v --basetemp={envtmpdir} --flake8 {posargs: tests fellowship}
 deps = py39: {[base3]deps}
 
 [testenv:pylint39]
