--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,29 @@
 [tox]
-envlist = py39, pylint39
+envlist = py39,
+          pylint39,
+          style,
+          docs-{dirhtml,spelling}
 
 [base3]
 deps =
-    -r{toxinidir}/requirements.txt
     mock
     pytest
     pytest-console-scripts
+    pytest-cov
     pytest-flake8
     pytest-mock
     requests-mock
 
 [testenv]
-commands = pytest -v --basetemp={envtmpdir} --flake8 {posargs: tests fellowship}
+basepython = python3.9
+commands = pytest -v --basetemp={envtmpdir} --flake8 {posargs: tests fellowship} \
+           --cov-config {toxinidir}/.coveragerc \
+           --cov-branch \
+           --cov={toxinidir}/tests \
+           --cov={envsitepackagesdir}/fellowship \
+           --cov-report html
 deps = py39: {[base3]deps}
+install_command = pip install --no-cache-dir {opts} {packages}
 
 [testenv:pylint39]
 basepython = python3.9
@@ -23,3 +33,23 @@ deps =
 commands = pylint {posargs: --rcfile={toxinidir}/.pylintrc \
                                {toxinidir}/tests \
                                {toxinidir}/fellowship }
+
+[testenv:style]
+deps =
+    flake8
+    flake8-bugbear
+
+commands =
+    {envpython} -m flake8 {posargs} {toxinidir}/fellowship {toxinidir}/tests
+
+[testenv:docs-dirhtml]
+basepython = python3.9
+commands = python -m sphinx -b dirhtml {toxinidir}/docs/ {envtmpdir}/build {posargs:-a -n -q -T -W}
+deps =
+    -r{toxinidir}/docs/requirements.txt
+
+[testenv:docs-spelling]
+basepython = python3.9
+commands = python -m sphinx -b spelling {toxinidir}/docs/ {envtmpdir}/build {posargs:-a -n -T -W} 
+deps =
+    -r{toxinidir}/docs/requirements.txt
