[#1]: Update Sphinx documentation to not use _folders

--- a/docs/requirements.in
+++ b/docs/requirements.in
@@ -1,11 +1,11 @@
-Jinja2==3.0.1
-attrs==21.2.0
-genson==1.2.2
-jsonschema==3.2.0
-pyenchant==3.2.1
-PyYAML==5.4.1
-rfc3987==1.3.8
-Sphinx==4.1.2
-sphinx-autodoc-typehints==1.12.0
-sphinx-rtd-theme==0.5.2
-sphinxcontrib-spelling==7.2.1
+Jinja2
+attrs
+genson
+jsonschema
+pyenchant
+PyYAML
+rfc3987
+Sphinx
+sphinx-autodoc-typehints
+sphinx-rtd-theme
+sphinxcontrib-spelling
