[#1]: Add arg-parser documentation

--- a/docs/requirements.in
+++ b/docs/requirements.in
@@ -2,10 +2,10 @@ Jinja2
 attrs
 genson
 jsonschema
-pyenchant
 PyYAML
 rfc3987
 Sphinx
+sphinx-argparse
 sphinx-autodoc-typehints
 sphinx-rtd-theme
 sphinxcontrib-spelling
