--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,9 @@
 [tox]
-envlist = py39,
-          pylint39,
-          docs-{dirhtml,spelling}
+envlist =py39,
+         pylint39,
+         pip-compile
+         docs-{dirhtml,spelling}
+
 
 [base3]
 deps =
@@ -12,6 +14,7 @@ deps =
     pytest-flake8
     pytest-mock
     requests-mock
+
 
 [testenv]
 basepython = python3.9
@@ -32,6 +35,13 @@ deps =
 commands = pylint {posargs: --rcfile={toxinidir}/.pylintrc \
                                {toxinidir}/tests \
                                {toxinidir}/fellowship }
+
+[testenv:pip-compile]
+basepython = python3.9
+deps=
+    pip-tools
+commands=
+    pip-compile --output-file=docs/requirements.txt docs/requirements.in
 
 [testenv:docs-dirhtml]
 basepython = python3.9
