--- a/.github/workflows/pre-merge.yml
+++ b/.github/workflows/pre-merge.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+      - name: Install graphviz
+        run: sudo apt-get install python-pydot python-pydot-ng graphviz
       - name: Install tox
         run: python -m pip install tox
       - name: Run Tests with Tox
