--- a/.github/workflows/pre-merge.yml
+++ b/.github/workflows/pre-merge.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - name: Install graphviz
-        run: sudo apt-get install python-pydot python-pydot-ng graphviz
+        run: sudo apt-get install graphviz
       - name: Install tox
         run: python -m pip install tox
       - name: Run Tests with Tox
