[#1]: Remove pytest_console_script patch
The bug in pytest console script was fixed so patch was
redudant. Also change logging stream to stdout.
Cosmetic changes to documentation and 100% test coverage

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist =py39,
+envlist =py{37,38,39}
          pylint39,
          pip-compile,
          docs-{dirhtml,spelling}
@@ -17,18 +17,16 @@ deps =
 
 
 [testenv]
-basepython = python3.9
 commands = pytest -v --basetemp={envtmpdir} --flake8 {posargs: tests fellowship} \
            --cov-config {toxinidir}/.coveragerc \
            --cov-branch \
            --cov={toxinidir}/tests \
            --cov={envsitepackagesdir}/fellowship \
            --cov-report html
-deps = py39: {[base3]deps}
+deps = {[base3]deps}
 install_command = pip install --no-cache-dir {opts} {packages}
 
 [testenv:pylint39]
-basepython = python3.9
 deps =
     pylint
     {[base3]deps}
@@ -37,20 +35,20 @@ commands = pylint {posargs: --rcfile={toxinidir}/.pylintrc \
                                {toxinidir}/fellowship }
 
 [testenv:pip-compile]
-basepython = python3.9
+basepython = python3.7
 deps=
     pip-tools
 commands=
     pip-compile --output-file=docs/requirements.txt docs/requirements.in
 
 [testenv:docs-dirhtml]
-basepython = python3.9
+basepython = python3.7
 commands = python -m sphinx -b dirhtml {toxinidir}/docs/ {envtmpdir}/build {posargs:-a -n -q -T -W}
 deps =
     -r{toxinidir}/docs/requirements.txt
 
 [testenv:docs-spelling]
-basepython = python3.9
+basepython = python3.7
 commands = python -m sphinx -b spelling {toxinidir}/docs/ {envtmpdir}/build {posargs:-a -n -T -W} 
 deps =
     -r{toxinidir}/docs/requirements.txt
