[#1]: Remove python version specification from tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
-envlist =py{37,38,39}
-         pylint39,
+envlist =py,
+         pylint,
          pip-compile,
          docs-{dirhtml,spelling}
 
@@ -26,7 +26,7 @@ commands = pytest -v --basetemp={envtmpdir} --flake8 {posargs: tests fellowship}
 deps = {[base3]deps}
 install_command = pip install --no-cache-dir {opts} {packages}
 
-[testenv:pylint39]
+[testenv:pylint]
 deps =
     pylint
     {[base3]deps}
@@ -35,20 +35,17 @@ commands = pylint {posargs: --rcfile={toxinidir}/.pylintrc \
                                {toxinidir}/fellowship }
 
 [testenv:pip-compile]
-basepython = python3.7
 deps=
     pip-tools
 commands=
     pip-compile --output-file=docs/requirements.txt docs/requirements.in
 
 [testenv:docs-dirhtml]
-basepython = python3.7
 commands = python -m sphinx -b dirhtml {toxinidir}/docs/ {envtmpdir}/build {posargs:-a -n -q -T -W}
 deps =
     -r{toxinidir}/docs/requirements.txt
 
 [testenv:docs-spelling]
-basepython = python3.7
 commands = python -m sphinx -b spelling {toxinidir}/docs/ {envtmpdir}/build {posargs:-a -n -T -W} 
 deps =
     -r{toxinidir}/docs/requirements.txt
