--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -1,6 +1,9 @@
 name: Build and publish Fellowship to PyPI and TestPyPI
 
-on: push
+on:
+  push
+  branches:
+    - master
 
 jobs:
   build-n-publish:
@@ -21,6 +24,7 @@ jobs:
       - name: Build a binary wheel and a source tarball
         run: python setup.py sdist
       - name: Publish distribution to Test PyPI
+        if: "!startsWith(github.ref, 'refs/tags')"
         uses: pypa/gh-action-pypi-publish@master
         with:
           password: ${{ secrets.TEST_PYPI_FELLOWSHIP_TOKEN }}
