--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -13,10 +13,18 @@ attrs==21.2.0
     #   jsonschema
 babel==2.9.1
     # via sphinx
+cachetools==4.2.4
+    # via google-auth
 certifi==2021.5.30
     # via requests
+cffi==1.15.0
+    # via cryptography
 charset-normalizer==2.0.4
     # via requests
+click==7.1.2
+    # via grpc-requests
+cryptography==35.0.0
+    # via grpc-requests
 docutils==0.16
     # via
     #   sphinx
@@ -24,6 +32,29 @@ docutils==0.16
 file:.#egg=fellowship
     # via -r docs/requirements.in
 genson==1.2.2
+    # via
+    #   -r docs/requirements.in
+    #   fellowship
+google-api-core==2.1.1
+    # via grpc-requests
+google-auth==2.3.1
+    # via google-api-core
+googleapis-common-protos==1.53.0
+    # via google-api-core
+grpc-requests==0.1.0
+    # via
+    #   -r docs/requirements.in
+    #   fellowship
+grpcio==1.41.1
+    # via
+    #   -r docs/requirements.in
+    #   fellowship
+    #   grpc-requests
+    #   grpcio-reflection
+    #   grpcio-tools
+grpcio-reflection==1.41.1
+    # via grpc-requests
+grpcio-tools==1.41.1
     # via
     #   -r docs/requirements.in
     #   fellowship
@@ -48,6 +79,20 @@ markupsafe==2.0.1
     # via jinja2
 packaging==21.0
     # via sphinx
+protobuf==3.19.0
+    # via
+    #   google-api-core
+    #   googleapis-common-protos
+    #   grpcio-reflection
+    #   grpcio-tools
+pyasn1==0.4.8
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.2.8
+    # via google-auth
+pycparser==2.20
+    # via cffi
 pyenchant==3.2.1
     # via sphinxcontrib-spelling
 pygments==2.10.0
@@ -66,13 +111,19 @@ requests==2.26.0
     # via
     #   -r docs/requirements.in
     #   fellowship
+    #   google-api-core
     #   sphinx
 rfc3987==1.3.8
     # via
     #   -r docs/requirements.in
     #   fellowship
+rsa==4.7.2
+    # via google-auth
 six==1.16.0
-    # via jsonschema
+    # via
+    #   google-auth
+    #   grpcio
+    #   jsonschema
 snowballstemmer==2.1.0
     # via sphinx
 sphinx==4.1.2
