--- a/fellowship/configs/grpc_config.yaml
+++ b/fellowship/configs/grpc_config.yaml
@@ -2,4 +2,6 @@
 # Licensed under the BSD 3-Clause License.
 # SPDX-License-Identifier: BSD-3-Clause
 
-__version__ = '0.1.0'
+host: localhost
+port: 50051
+method: stub
